updated the docs

--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,13 @@ body{
     background-color: #111827;
     color: white;
 }
+
+.animation-delay-300 {
+                    animation-delay: 300ms;
+                }
+                .animation-delay-500 {
+                    animation-delay: 500ms;
+                }
+                .animation-delay-700 {
+                    animation-delay: 700ms;
+                }
